--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css"
     />
-    <title>Mindbox ToDo</title>
+    <title>ToDo app</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
